Improve arxiv parsing by moving specified fields to eprint fields and add tests